# mecha-device-cli

./: Cargo.toml  README.md  mecha_0.1.0.bb
src/: audio.rs  battery.rs  bluetooth.rs  cpu.rs  device_info.rs  display.rs  main.rs  usb.rs  wifi.rs
